editor-components/call_to_action/call_to_action18/call_to_action18.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  .max-content {
    background-color: var(--composer-font-color-primary);
    border-radius: var(--composer-border-radius-md);
    padding: var(--composer-gap-xl);
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    gap: var(--composer-gap-lg);

    .header {
      align-items: flex-start;

      .subtitle {
        color: var(--composer-html-background);
        text-align: left;
        margin-left: 0;
        transform: translateX(0);
        &::before {
          display: none;
        }
      }

      .title,
      .description {
        color: var(--composer-html-background);
        text-align: left;
      }
    }

    .buttons {
      display: flex;
      gap: var(--composer-gap-md);
      flex-shrink: 0;
      flex-wrap: wrap;

      .button {
        content: "";
        .button-text {
          content: "";
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      flex-direction: column;
      align-items: flex-start;
      gap: var(--composer-gap-sm);
    }
  }
}

