fix: align button with last item, fix subtitle color, and convert buttons to array

--- a/editor-components/call_to_action/call_to_action18/call_to_action18.module.scss
+++ b/editor-components/call_to_action/call_to_action18/call_to_action18.module.scss
@@ -37,7 +37,6 @@
       flex-wrap: wrap;
 
       .button {
-        content: "";
         .button-text {
           content: "";
         }
